src/objects/Community_MenuItems__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_to_Profile_Names__c</fullName>
        <label>Access to Profile Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Label__c</fullName>
        <label>Menu Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisibleTo__c</fullName>
        <inlineHelpText>Populate Profile Ids (18digit)</inlineHelpText>
        <label>VisibleTo</label>
        <type>TextArea</type>
    </fields>
    <description>Used to control the tab in portal community</description>
    <label>Community MenuItem</label>
    <pluralLabel>Community MenuItems</pluralLabel>
</CustomObject>